# btc-comms

./: .gitignore  CLAUDE.md  DEMO.md  Dockerfile  PITCH.md  README.md  docker-compose.yml  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  uds-bundle.yaml  zarf.yaml
.github/workflows/: ci.yml
demo/: README.md  index.html  package-lock.json  package.json  vite.config.js
demo/src/: App.jsx  api.js  humanize.js  main.jsx  scenario.js  styles.css  useStable.js
demo/src/components/: AgentPanel.jsx  AlarmBanner.jsx  AnchorBar.jsx  Chain.jsx  DemoControls.jsx  InvestigationView.jsx  MonitoringView.jsx  ProofModal.jsx  VerifyBanner.jsx
demo/src/components/scenes/: ChainView.jsx  S1_Stream.jsx  S2_Hash.jsx  S3_Chain.jsx  S4_Sign.jsx  S5_Anchor.jsx  S6_Tamper.jsx
docs/: ARCHITECTURE.md  DEMO.md  DEPLOYMENT.md  EXPLAINER.md  MISSION_IMPACT.md  PITCH.md  THREAT_SCENARIO.md  UDS_CAPABILITY.md  WORK_STATEMENT.md
examples/: ddil_demo.py  demo_agent.py  demo_app.html  file_agent.py  llm_agent.py
k8s/: deployment.yaml  example-consumer.yaml  service.yaml
src/: anchor.py  api.py  ledger.py  merkle.py  mmr.py  mock_calendar.py  model_anchor.py  roe_schema.py  signing.py  tee.py  verify.py
src/adapters/: __init__.py  audit_decorator.py  client.py  inference_logger.py  logging_handler.py
tests/: conftest.py  test_api.py  test_api_features.py  test_audit_webhook.py  test_ddil.py  test_inference_logger.py  test_ledger_store.py  test_merkle.py  test_mmr.py  test_model_anchor.py  test_roe.py  test_signing.py  test_tee.py  test_verify.py
web/: index.html
