[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "stable"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Adds src/ to sys.path for all test runs — removes the need for sys.path.insert
# in conftest.py or individual test files.
pythonpath = ["src"]
