[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "stable"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "sse-starlette>=1.6",
    "opentimestamps-client>=0.7",
    "pycryptodomex>=3.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx>=0.24",
]
llm = [
    "anthropic>=0.40",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Adds src/ to sys.path for all test runs — removes the need for sys.path.insert
# in conftest.py or individual test files.
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "httpx>=0.24",
]
